Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -6,125 +6,7 @@ I'm planning on having a list here of all the planning authorities in the UK, an
 
 The list of authorities I am getting them from is here http://www.theplanningdirectory.co.uk/auto/index.html.
 
-== A ==
-|| || *Aberdeen* || Aberdeen City Council ||  weekly lists as pdf || http://www.aberdeencity.gov.uk/ACCI/web/site/Planning/SL/pla_PlanningApps.asp ||
-|| || *Aberdeenshire* || Aberdeenshire Council || search facility which includes date || http://www.aberdeenshire.gov.uk/planning/apps/index.asp#search || 
-|| || *Adur* ||Adur District Council || weekly listings as pdf || http://www.adur.gov.uk/planning/applications/planning-apps.htm || 
-|| Done || Allerdale || Allerdale Borough Council || ApplicationSearchServlet || http://planning.allerdale.gov.uk/portal/servlets/ApplicationSearchServlet || 
-|| Done || Alnwick || Alnwick District Council || ApplicationSearchServlet || http://services.castlemorpeth.gov.uk:7777/portal/servlets/ApplicationSearchServlet ||
-|| || *Amber Valley* || Amber Valley Borough Council || search facility with dates || http://www.ambervalley.gov.uk/services/environment/landandpremises/planningtownandcountry/planningapplications/PlanningApplicationRegister.htm ||
-|| Done || Angus || Angus Council || Public Access 7.3.1c || http://planning.angus.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
-|| Done || Argyll and Bute || Argyll and Bute Council || Public Access 7.3.1c || http://www.argyll-bute.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
-|| || *Arun* || Arun District Council || weekly lists as ps file converted to html || http://www.arun.gov.uk/cgi-bin/buildpage.pl?mysql=448 ||
-|| || *Ashfield* || Ashfield District Council || search facility including date || http://www.ashfield-dc.gov.uk/cfusion/planning/plan_findfile.cfm ||
-|| || *Ashford* || Ashford Borough Council || Whole domain is timing out today... || http://www.ashford.gov.uk/planning/index.asp ||
-|| Done || Aylesbury Vale || Aylesbury Vale District Council || Public Access 7.3.1c || http://eplanning.aylesburyvaledc.gov.uk/dc/DcApplication/application_searchform.aspx ||
-
-== B ==
-|| Done || Babergh || Babergh District Council || search page with dates || http://planning.babergh.gov.uk/dataOnlinePlanning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
-|| || Barking and Dagenham || Barking & Dagenham Borough Council || weekly and monthly lists in html || http://idoxwam.lbbd.gov.uk:8081/WAM/search/pas/index.htm ||
-|| || Barnet || Barnet Borough Council || current applications are searchable by date || http://planning.barnet.gov.uk:7778/pls/portal/PORTAL.wwa_app_module.show?p_sessionid=205173 ||
-|| || Barnsley || Barnsley Metropolitan Borough Council || weekly lists in html. Rather out of date, and nowhere obvious to comment. ||http://applications.barnsley.gov.uk/service/development/weeklylist.asp ||
-|| Done || Barrow ||Barrow-in-Furness Borough Council || ApplicationSearchServlet || http://localportal.barrowbc.gov.uk/portal/servlets/WeeklyListServlet ||
-|| Done || Basildon || Basildon District Council || Public Access 7.3.1c || http://planning.basildon.gov.uk/publicaccess/tdc/DcApplication/application_searchresults.aspx?searchtype=SPEC ||
-|| Done || Basingstoke || Basingstoke & Deane Borough Council || Search facility including dates || http://planning.basingstoke.gov.uk/DCOnline2/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
-|| Done || Bassetlaw || Bassetlaw District Council || Search facility including dates || http://www.bassetlaw.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
-|| Done || Bath || Bath & North East Somerset Council || Public Access || http://planning.bathnes.gov.uk/publicaccess/ ||
-|| Done || Bedford || Bedford Borough Council || Public Access ||http://www.publicaccess.bedford.gov.uk/publicaccess/default.aspx ||
-|| || Bedfordshire || Bedfordshire County Council || county council only responsible for a small amount of planning and nothing obvious listed online || ||
-|| || Berwick || Berwick-upon-Tweed Borough Council || weekly lists in html || http://www.berwick-upon-tweed.gov.uk/planning/register.htm ||
-|| Done || Bexley || Bexley Borough Council || Public Access ||http://publicaccess.bexley.gov.uk/publicaccess/tdc/tdc_home.aspx ||
-|| || Birmingham ||Birmingham City Council || searchable by date || http://www.birmingham.gov.uk/GenerateContent?CONTENT_ITEM_ID=67548&CONTENT_ITEM_TYPE=0&MENU_ID=12189 ||
-|| Done || Blaby || Blaby District Council || PublicAccess || http://www.blaby.gov.uk/PublicAccess ||
-|| || Blackburn || Blackburn with Darwen Borough Council || PlanningExplorer - searchable by date || http://195.8.175.6/MVM/Online/PL/GeneralSearch.aspx ||
-|| || Blaenau Gwent ||Blaenau Gwent County Borough Council || All of 2007 in one big list ||http://www.blaenau-gwent.gov.uk/environment/8380.asp ||
-|| || Blyth Valley || Blyth Valley Borough Council || weekly lists as pdf, rather out of date || http://www.blythvalley.gov.uk/Default.aspx?page=10932 ||
-|| Done || Bolsover || Bolsover District Council || Public Access || http://217.158.161.181/publicaccess/tdc/DcApplication/application_searchform.aspx ||
-|| || Bolton || Bolton Metropolitan Borough Council || Page doesn't display in firefox... || http://www.bolton.gov.uk/pls/portal92/docs/PAGE/ENVIRONMENT_DEPARTMENT/PLANNING_DIVISION/PLANNING%20CONTROL/TAB80709/GENERAL%20PAGES/APPLICATION_SEARCH.HTM ||
-|| || Boston || Boston Borough Council || searchable by date. claims to be under construction. || http://www.boston.gov.uk/index.php?option=com_wrapper&Itemid=3433 ||
-|| || Bournmouth || Bournemouth Borough Council || weekly list as pdf || http://www.bournemouth.gov.uk/Residents/Planning_Development/Planning_Applications/Lists/default.asp ||
-|| Being worked on || Bracknell Forest || Bracknell Forest Borough Council || Public Access site using https || https://my.bracknell-forest.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
-|| Done || Bradford || City of Bradford Metropolitan District Council || Public Access || http://www.planning4bradford.com/tdc/DcApplication/application_searchform.aspx ||
-|| || Braintree || Braintree District Council || braintree.gov.uk seems to be broken || ||
-|| || Brecon Beacons || Breacon Beacons National Park Authority || weekly lists as pdf or rtf || http://www.breconbeacons.org/planning/planning_apps ||
-|| || Breckland || Breckland District Council || looks like weekly lists, but page not currently responding || ||
-|| || Brent || Brent Borough Council || search by date || http://www.brent.gov.uk/servlet/ep.ext?extId=101149&byPeriod=Y&st=PL&periodUnits=day&periodMultiples=14 ||
-|| || Brentwood || Brentwood Borough Council || weekly lists as pdf || http://www.brentwood-council.gov.uk/index.php?cid=573 ||
-|| || Bridgend || Bridgend County Borough Council || searchable by date, but looks unlikely to work || http://www.bridgend.gov.uk/english/planningportal.asp ||
-|| In progress || Bridgnorth || Bridgnorth District Council || searchable by date || http://www2.bridgnorth-dc.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeApplications ||
-|| || Brighton || Brighton & Hove Borough Council || searchable by date || http://www.brighton-hove.gov.uk/index.cfm?request=c1133441 ||
-|| Done || Bristol || Bristol City Council || Public Access || http://e2eweb.bristol-city.gov.uk/publicaccess/default.aspx ||
-|| || Broadland || Broadland District Council || Planning Explorer - not obviously searchable by date received || http://www.broadland.gov.uk/mvm/Online/PL/GeneralSearch.aspx ||
-|| In progress || Broads || Broads Authority || Public Access || Public Access on https || https://planning.broads-authority.gov.uk/PublicAccess/ ||
-|| || Bromsgrove || Bromsgrove District Council || pdf of year to date || http://bromsgrove.whub.org.uk/home/bdcindex/bdc-planning/bdc-planning-applications/bdc-planning-recent-applications.htm ||
-|| Tom's scraper || Broxbourne || Broxbourne Borough Council || searchable by date || http://www.broxbourne.gov.uk/Internet/Applications/Planning%20Applications ||
-|| || Broxtowe || Broxtowe Borough Council || searchable html weekly lists || http://www.broxtowe.gov.uk/index/planning_new/planning_development_control_new/planning_development_control_planning_applications/planning_applications_disclaimer/planning_applications_search_for_planning_application.htm ||
-|| Done || Buckinghamshire || Buckinghamshire County Council || Public Access || http://www.bucksplanning.gov.uk/publicaccess/ ||
-|| || Burnley || Burnley Borough Council || weekly lists || http://www.burnley.gov.uk/site/scripts/planning.php ||
-|| Done || Bury || Bury Metropolitan Borough Council || acolnetcgi.gov || http://e-planning.bury.gov.uk/eplanning/acolnetcgi.gov ||
-
-==C==
-|| || Caerphilly || Caerphilly County Borough Council || weekly lists as PDFs || http://www.caerphilly.gov.uk/yourservices/planning/planningbulletin/index.htm ||
-|| || Calderdale ||  Calderdale Metropolitan Borough Council ||search by date || http://www.calderdale.gov.uk/environment/planning/search-applications/index.jsp ||
-|| done || Cambridge ||  Cambridge City Council ||public access|| http://www.cambridge.gov.uk/publicaccess/tdc/tdc_home.aspx ||
-|| In progress || Cambridgeshire ||  Cambridgeshire County Council ||acolnetcgi|| http://planapps.cambridgeshire.gov.uk/scripts/acolnet/acolnetcgi.exe? ||
-|| Done || Camden ||  London Borough of Camden || || http://www.camden.gov.uk/ccm/navigation/environment/planning-and-built-environment ||
-|| || Cannock ||  Cannock Chase District Council || monthly application lists || http://www.cannockchasedc.gov.uk/site/scripts/documents_info.php?documentID=347&pageNumber=2 ||
-|| In progress || Canterbury ||  Canterbury City Council  || acolnetcgi || http://planning.canterbury.gov.uk/scripts/acolnetcgi.exe ||
-|| Being worked on|| Caradon ||   Caradon District Council  || PublicAccess || http://publicaccess.caradon.gov.uk/publicaccess/ ||
-|| || Cardiff ||   Cardiff County Council  || cant find anything ||  ||
-|| In progress || Carlisle ||  Carlisle City Council  || acolnetcgi || http://planning.carlisle.gov.uk/acolnet/acolnetcgi.gov ||
-|| || Carmarthenshire ||   Carmarthenshire County Council  || searchable by date || http://www.carmarthenshire.gov.uk/CCC_APPS/eng/plannaps/ccc_planningapplications.asp ||
-|| || Carrick ||    Carrick District Council  || searchable by date || http://www.carrick.gov.uk/index.cfm?articleid=13904 ||
-|| || Castle Morpeth ||    Castle Morpeth Borough Council  || searchable by date || http://www.castlemorpeth.gov.uk/addon/planningapps/search.asp ||
-|| ||  Castle Point ||   Castle Point Borough Council  || searchable by date || http://planning.castlepoint.gov.uk/servlet/page?_pageid=77&_dad=portal30&_schema=PORTAL30 ||
-|| ||  Ceredigion ||   Ceredigion County Council  || Excel files by date! || http://www.ceredigion.gov.uk/index.cfm?articleid=3125 ||
-|| ||  Charnwood ||    Charnwood Borough Council  || PlanningExplorer || http://portal.charnwoodbc.gov.uk/MVM/Online/PL/Home.aspx ||
-|| being worked on ||  Chelmsford ||   Chelmsford Borough Council  || PublicAccess || http://portal.charnwoodbc.gov.uk/MVM/Online/PL/Home.aspx ||
-|| Done ||  Cheltenham ||   Cheltenham Borough Council  || PublicAccess || http://planning.cheltenham.gov.uk/publicaccess/ ||
-|| Done ||  Cherwell ||    Cherwell District Council  || PublicAccess || http://cherweb.cherwell-dc.gov.uk/publicaccess/default.aspx ||
-||  ||  Cheshire ||   Cheshire County Council  || PDFs, usefullish urls || http://www.cheshire.gov.uk/Planning/Planning%20Applications.htm ||
-||  ||  Chester ||   Chester City Council  || UK Planning || http://www.ukplanning.com/chester/search/index.htm ||
-|| Done ||  Chester-le-Street ||   Chester-le-Street District Council  || PublicAccess || http://planning.chester-le-street.gov.uk/publicaccess/ ||
-||  ||  Chesterfield ||  Chesterfield Borough Council  || Weekly list || hhttp://www.chesterfield.gov.uk/planning/default.asp?mode=&ShowAll=true ||
-||  ||  Chichester ||   Chichester District Council  || WAM/UKPlanning? || http://wam.chichester.gov.uk/WAM/search/pas/index.htm;jsessionid=5D6D9B7A4C0F07CC472DE776DF9EA75D ||
-||  ||  Chiltern ||  Chiltern District Council  || PublicAccess(https) || https://isa.chiltern.gov.uk/publicaccess/ ||
-||  ||  Chorley ||   Chorley Borough Council  || PublicAccess(broken) || http://planning.chorley.gov.uk/PublicAccess/propdb/property/property_searchform.aspx ||
-||  ||  Christchurch ||   Christchurch Borough Council || DorsetForYou || http://www.dorsetforyou.com/index.jsp?articleid=356063 ||
-|| Done ||  City ||  Corporation of London || PublicAccess ||  ||
-||  ||  Clackmannanshire ||   Clackmannanshire Council || Searchable by date || http://www.clacksweb.org.uk/property/planningregister/ ||
-||  || Colchester ||  Colchester Borough Council || Weekly and Monthly lists - database appears to be empty... || http://www.planning.colchester.gov.uk/WAM/searchsubmit/performOption.do?action=search ||
-||  ||  Comhairle nan Eilean Siar || Stornaway || Weekly lists in html - nice easy looking format || http://www.cne-siar.gov.uk/planapps/april2007.htm ||
-||  || Congleton Borough Council || Congleton || Weekly lists as pdf || http://www.congleton.gov.uk/?t=589 ||
-||  || Conwy County Borough Council || Conwy || Weekly lists as pdf || http://www.conwy.gov.uk/doc.asp?cat=1865&doc=19243 ||
-||  || Copeland Borough Council || Copeland || Weekly lists as pdf || http://www.copelandbc.gov.uk/main.asp?page=2888 ||
-|| Done || Corby Borough Council || Corby || PublicAccess || https://publicaccess.corby.gov.uk/publicaccess/ ||
-|| Done || Cornwall County Council || Cornwall || PublicAccess || http://planapps.cornwall.gov.uk/publicaccess/ ||
-|| || Costwold District Council || Cotswold || Weekly and monthly lists in html || http://www.cotswold.gov.uk/nqcontent.cfm?a_id=2297&tt=cotswold ||
-|| Done || Coventry City Council || Coventry || ApplicationSearchServlet || http://planning.coventry.gov.uk/portal/servlets/ApplicationSearchServlet ||
-||  || Craven District Council || Craven || searchable by date received || http://www.planning.cravendc.gov.uk/fastweb/results.asp ||
-||  || Crawley Borough Council || Crawley || searchable by date received || http://www.crawley.gov.uk/stellent/idcplg?IdcService=SS_GET_PAGE&nodeId=560 ||
-||  || Crewe and Nantwich Borough Council || Crewe and Nantwich || searchable by date - PlanningExplorer || http://portal.crewe-nantwich.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
-|| Done || Croydon (London Borough of ) || Croydon || acolnet || http://planning.croydon.gov.uk/DCWebPages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
-||  || Cumbria County Council || Cumbria || searchable by date || http://217.114.50.149:7778/ePlanning/searchPageLoad.do ||
-
-==D==
-|| || Dacorum || Dacorum Borough Council || A list for the last week is available. Searching, but not by received date || http://www.dacorum.gov.uk/default.aspx?page=1495 ||
-|| || Darlington || Darlington Borough Council || Applications can be searched by validation date (whatever that is...) Weekly list also available. || http://www.darlington.gov.uk/eServices/PlanApps/PlanAppsViewer.aspx?SearchType=advanced ||
-|| Done || Dartford || Dartford Borough Council || PublicAccess || || 
-|| || Dartmoor || Dartmoor National Park Authority || weekly and monthly lists in html || http://www.dartmoor-npa.gov.uk/index/planning/pl-devcontrol/pl-searchapplicationregister/application_register.htm ||
-|| || Daventry || Daventry District Council || searchable by date ||  http://www.daventrydc.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
-|| Done || Denbighshire || Denbighshire County Council|| ApplicationSearchServlet ||  http://planning.denbighshire.gov.uk/portal/servlets/ApplicationSearchServlet ||
-|| Done || Derby || Derby City Council || acolnetcgi ||  http://195.224.106.204/scripts/planningpages02/acolnetcgi.gov ||
-|| || Derbyshire || Derbyshire County Council || only responsible for a small amount. all apps online ||  http://www.derbyshire.gov.uk/environment/planning/planning_applications/current_applications/ ||
-|| || Derbyshire Dales || Derbyshire Dales District Council || weekly lists in html. appalling looking search page || http://www.doctec.co.uk/derbyshiredales/aspxpages/WeeklyLists.aspx ||
-|| || Derwentside || Derwentside District Council || searchable by date received || http://www.derwentside.gov.uk/index.cfm?articleid=8427 ||
-|| || Devon || Devon County Council || monthly lists of councils own applications || http://www.devon.gov.uk/index/environment/planning/planning-system/planning_applications-mw/planning_applications.htm ||
-|| Done || Doncaster || Doncaster Metropolitan Borough Council || PublicAccess || http://maps.doncaster.gov.uk/publicaccess/tdc/tdc_home.aspx ||
-|| || Dorset || Dorset County Council || handles very few apps. Searchable by some dates. http://www.dorsetforyou.com/ePlanning/searchPageLoad.do ||
-|| || Dover || Dover District Council || searchable by date received || http://www.dover.gov.uk/planning/Search_net/search.aspx ||
-|| || Dudley || Dudley Metropolitan Borough Council || searchable by some dates, and weekly lists || http://www2.dudley.gov.uk/swiftlg/apas/run/Wphappcriteria.display ||
-|| || Dumfries and Galloway || Dumfries and Galloway Council || weekly pdy lists separated into five areas || http://www.dumgal.gov.uk/dumgal/MiniWeb.aspx?id=91&menuid=1408&openid=1102 ||
-|| Done || Dundee || Dundee City Council || PublicAccess || ||
-|| Done || Durham || Durham City Council || Publicaccess - database appears to be empty || ||
-|| || Durham County || Durham County Council || Online register searchable by month and year || http://gis.durham.gov.uk/website/dcs/SearchMain.asp ||
+|| A || PlanningAuthoritiesA ||
+|| B || PlanningAuthoritiesB ||
+|| C || PlanningAuthoritiesC ||
+|| D || PlanningAuthoritiesD ||
