Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -38,6 +38,7 @@
   * Bury
   * Croydon
   * Derby
+  * East Lindsey
 
 = Scrapes done, but sites broken =
   * Doncaster (site down when attempted to test?)
