Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesE.wiki
+++ b/wiki/PlanningAuthoritiesE.wiki
@@ -24,6 +24,6 @@
 ||  || Epping Forest District Council || Epping || searchable by date || http://plan1.eppingforestdc.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 || ready || Epsom & Ewell Borough Council || Epsom || PublicAccess || http://eplanning.epsom-ewell.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
 ||  || Erewash Borough Council || Nottingham || weekly lists as pdf - latest apps as html || http://www.erewashbc.org.uk/planning/index.asp ||
-||  || Essex County Council || Chelmsford || || ||
-||  || Exeter City Council || Exeter || || ||
-||  || Exmoor National Park Authority || Dulverton || || ||
+||  || Essex County Council || Chelmsford || site was down when I checked || ||
+||  || Exeter City Council || Exeter || site was down when I checked || http://www.exeter.gov.uk/index.aspx?articleid=3467 ||
+||  || Exmoor National Park Authority || Dulverton || weekly lists as html || http://www.exmoor-nationalpark.gov.uk/planning_application_search_week_ending.htm ||
