--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -10,3 +10,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || B || [PlanningAuthoritiesB] ||
 || C || [PlanningAuthoritiesC] ||
 || D || [PlanningAuthoritiesD] ||
+|| E || [PlanningAuthoritiesE] ||
