--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -40,6 +40,7 @@
   * Derby
   * East Lindsey
   * Fenland
+  * Fylde
 
 = Scrapes done, but sites broken =
   * Doncaster (site down when attempted to test?)
