--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -11,3 +11,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || C || [PlanningAuthoritiesC] ||
 || D || [PlanningAuthoritiesD] ||
 || E || [PlanningAuthoritiesE] ||
+|| F || [PlanningAuthoritiesF] ||
