Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -12,3 +12,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || D || [PlanningAuthoritiesD] ||
 || E || [PlanningAuthoritiesE] ||
 || F || [PlanningAuthoritiesF] ||
+|| G || [PlanningAuthoritiesG] ||
