--- a/wiki/PlanningAuthoritiesG.wiki
+++ b/wiki/PlanningAuthoritiesG.wiki
@@ -5,7 +5,7 @@ http://www.glasgow.gov.uk/en/Business/Planning_Development/DevelopmentControl/Si
 || Done || Gloucester City Council || Gloucester || PublicAccess || http://www.glcstrplnng11.co.uk/publicaccess/ ||
 || Ready || Gloucestershire County Council || Gloucester || PublicAccess || http://planning.gloucestershire.gov.uk/publicaccess/ ||
 ||  || Gosport Borough Council || Gosport || search by date || http://www.gosport.gov.uk/gbcplanning/ApplicationSearch2.aspx ||
-|| Done || Gravesham Borough Council || Gravesend || 
+|| Done || Gravesham Borough Council || Gravesend || site is down || ||
 ||  || Great Yarmouth Borough Council || Great Yarmouth || weekly and monthly pdfs || http://www.great-yarmouth.gov.uk/planning/development_control/planning_applications/archived_applications_2006.htm ||
 ||  || Greenwich Borough Council || London || weekly lists in html || http://www.greenwich.gov.uk/Greenwich/YourEnvironment/PlanningAndBuilding/PlanningBuildingConservation/ApplicationsDecisionsAppeals/PlanningApplications/April/ ||
 ||  || Guildford Borough Council || Guildford || it's acolnet, but not as we know it. || http://www.guildford.gov.uk/acolnet/ ||
