Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -38,6 +38,7 @@
   * Gateshead
   * Gedling
   * Gloucestershire
+  * Hammersmith and Fulham
   * Newcastle-under-Lyme
   * Vale Royal
   * Winchester
