Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -39,6 +39,7 @@
   * Gedling
   * Gloucestershire
   * Hammersmith and Fulham
+  * Harlow
   * Newcastle-under-Lyme
   * Vale Royal
   * Winchester
