--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -41,6 +41,7 @@
   * Gloucestershire
   * Hammersmith and Fulham
   * Harlow
+  * Hertsmere
   * Newcastle-under-Lyme
   * North Hertfordshire
   * Vale Royal
