Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -13,3 +13,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || E || [PlanningAuthoritiesE] ||
 || F || [PlanningAuthoritiesF] ||
 || G || [PlanningAuthoritiesG] ||
+|| H || [PlanningAuthoritiesH] ||
