Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -14,3 +14,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || F || [PlanningAuthoritiesF] ||
 || G || [PlanningAuthoritiesG] ||
 || H || [PlanningAuthoritiesH] ||
+|| I || [PlanningAuthoritiesI] ||
