Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -15,3 +15,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || G || [PlanningAuthoritiesG] ||
 || H || [PlanningAuthoritiesH] ||
 || I || [PlanningAuthoritiesI] ||
+|| J || [PlanningAuthoritiesJ] ||
