--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -16,3 +16,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || H || [PlanningAuthoritiesH] ||
 || I || [PlanningAuthoritiesI] ||
 || J || [PlanningAuthoritiesJ] ||
+|| K || [PlanningAuthoritiesK] ||
