Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -42,6 +42,7 @@
   * Hammersmith and Fulham
   * Harlow
   * Hertsmere
+  * Lewisham
   * Newcastle-under-Lyme
   * North Hertfordshire
   * Vale Royal
