Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -17,3 +17,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || I || [PlanningAuthoritiesI] ||
 || J || [PlanningAuthoritiesJ] ||
 || K || [PlanningAuthoritiesK] ||
+|| L || [PlanningAuthoritiesL] ||
