Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -18,3 +18,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || J || [PlanningAuthoritiesJ] ||
 || K || [PlanningAuthoritiesK] ||
 || L || [PlanningAuthoritiesL] ||
+|| M || [PlanningAuthoritiesM] ||
